# lunatic-python

./: .gitignore  CMakeLists.txt  README.md  test.lua  test2.lua  testlua.py
src/: auxiliary.c  auxiliary.h  constants.h  errorhandler.cpp  errorhandler.h  lapi.c  lapi.h  lexception.c  lexception.h  lshared.c  lshared.h  luaconv.c  luaconv.h  luainpython.c  luainpython.h  pyconv.c  pyconv.h  pythoninlua.c  pythoninlua.h  stack.c  stack.h  utils.c  utils.h
src/fileio/: fileio.c  fileio.h
tests/lua/: test.lua  test.py  test2.lua
tests/python/: test.lua  test.py  test2.lua
